force-app/main/default/objects/L_PR_Idea_Affiliation__c/L_PR_Idea_Affiliation__c.object-meta.xml
<CustomObject>
    <description>Junction object to capture Lead/Idea and affiliation relationship records</description>
    <label>Lead Affiliation</label>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>Lead Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>