force-app/main/default/objects/L_PR_Idea_Affiliation__c/fields/L_PR_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Affiliation__c</fullName>
    <label>Affiliation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>I_RM_Affiliation__c.I_RM_Role__c</field>
            <operation>equals</operation>
            <value>La Trobe Staff, Secondary School Representative, External Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>PRM Leads</relationshipLabel>
    <relationshipName>PRM_Leads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>