force-app/main/default/objects/L_PR_Idea_Affiliation__c/fields/L_PR_Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Affiliation_Type__c</fullName>
    <formula>TEXT(L_PR_Affiliation__r.I_RM_Role__c)</formula>
    <label>Affiliation Type</label>
    <type>Text</type>
</CustomField>