force-app/main/default/objects/L_PR_Idea_Affiliation__c/fields/L_PR_Idea__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Idea__c</fullName>
    <label>PRM Lead</label>
    <referenceTo>L_PR_Idea__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>