force-app/main/default/objects/L_PR_Idea_Affiliation__c/validationRules/Restrict_Closed_Lead_Aff_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Closed_Lead_Aff_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(L_PR_Idea__r.L_PR_Lead_Status__c , &apos;Closed&apos;) || ISPICKVAL(L_PR_Idea__r.L_PR_Lead_Status__c , &apos;Closed – Converted&apos;)</errorConditionFormula>
    <errorMessage>Cannot link Affiliation to Closed Lead</errorMessage>
</ValidationRule>